basic location marker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Search By Image</string>
     <string name="latitude">latitude</string>
+    <string name="title_activity_location">Map</string>
 </resources>
