--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Search By Image</string>
     <string name="latitude">latitude</string>
     <string name="title_activity_location">Map</string>
+    <string name="acercar">Acercar</string>
 </resources>
